--- a/index.css
+++ b/index.css
@@ -7,10 +7,10 @@ nav .container-fluid img {
      color: #ebd79b79;
   }
 nav a {
-  color: #ebd79b79;
+  color: #e8e8e779;
 }
 body {
-    background-color: #ebd79b79;
+  background-image: url(sfondo.webp);
   }
 
 
