--- a/index.css
+++ b/index.css
@@ -10,7 +10,8 @@ nav a {
   color: #e8e8e779;
 }
 body {
-  background-image: url(sfondo.webp);
+  background-image: url(close-up-honey-comb.jpg);
+  background-size: cover;
   }
 
 
