--- a/edit.css
+++ b/edit.css
@@ -1,47 +1,32 @@
-body {
-    font-family: "Lato";
-    background-color: #ffffff;
-}
-
 nav {
-    box-shadow: 0 5px 6px rgba(0, 0, 0, 0.3);
-}
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
+  }
+  nav .container-fluid img {
+      width: 5rem; 
+      border-radius: 50%;
+      box-shadow: 20px;
+    }
+  .navbar-brand {
+       color: #ebd79b79;
+    }
+  nav a {
+    color: #e8e8e779;
+  }
+  body {
+    background-image: url(close-up-honey-comb.jpg);
+    background-size:inherit; 
+    }
 
-nav button {
-    border: 1px solid #e7746f !important;
-    color: #e7746f !important;
-}
-
-nav button:hover {
-    border: 1px solid #eca19d !important;
-    color: #eca19d !important;
-}
 
 main {
     width: 90%;
     margin: auto;
 }
 
-#searchForm {
-    width: 70%;
-    margin: auto;
-}
-
-#searchForm input {
-    height: 2.8rem;
-}
-
-#searchForm .alert {
-    width: 92%;
-    margin: auto;
-}
-
-#searchForm form {
-    gap: 0.5rem;
-}
-
 h3 {
-    color: #e7746f;
+    color: #13120fc8;
     text-align: center;
     font-weight: bold;
 }
